# propco-financial-assistant

./: .env.example  .gitignore  README.md  SPEC.md  data.md  implementation.md  mlruns.db-journal  pyproject.toml  video.md
docs/: architecture.md  decisions.md  implementation_plan.md
scripts/: preprocess_data.py  run_demo.sh
src/: cache.py  telemetry.py
src/agents/: aggregator.py  critic.py  extractor.py  gate.py  join_layer1.py  planner.py  prefetcher.py  reason_and_synthesize.py  retrieval.py  retriever.py  synthesizer.py  worker.py
src/data/: fuzzy.py  loader.py
src/graph/: state.py  workflow.py
src/llm/: local.py
src/utils/: config.py  llm_client.py
tests/: conftest.py  test_cache.py  test_calculations.py  test_e2e.py  test_executor.py  test_extraction.py  test_graph.py  test_matching.py  test_memory.py  test_planner.py  test_query_tools.py
ui/: streamlit_app.py
